@@ -2,8 +2,6 @@ package org.opentripplanner.street.model.edge;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.opentripplanner.street.model.StreetModelFactory.intersectionVertex;
 import static org.opentripplanner.street.model.StreetModelFactory.streetEdge;
@@ -17,13 +15,11 @@ import java.util.Collections;
 import java.util.Set;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.opentripplanner.core.model.id.FeedScopedId;
 import org.opentripplanner.service.vehiclerental.model.GeofencingZone;
 import org.opentripplanner.service.vehiclerental.model.RentalVehicleType.PropulsionType;
-import org.opentripplanner.service.vehiclerental.street.BusinessAreaBorder;
-import org.opentripplanner.service.vehiclerental.street.GeofencingZoneExtension;
+import org.opentripplanner.service.vehiclerental.model.TestGeofencingZoneBuilder;
+import org.opentripplanner.service.vehiclerental.street.geofencing.GeofencingBoundaryExtension;
 import org.opentripplanner.street.model.RentalFormFactor;
-import org.opentripplanner.street.model.RentalRestrictionExtension;
 import org.opentripplanner.street.model.StreetMode;
 import org.opentripplanner.street.model.vertex.StreetVertex;
 import org.opentripplanner.street.model.vertex.Vertex;
@@ -36,61 +32,40 @@ class StreetEdgeGeofencingTest {
 
   static String NETWORK_TIER = "tier-oslo";
   static String NETWORK_BIRD = "bird-oslo";
-  static RentalRestrictionExtension NO_DROP_OFF_TIER = noDropOffRestriction(NETWORK_TIER);
-  static RentalRestrictionExtension NO_TRAVERSAL = new GeofencingZoneExtension(
-    new GeofencingZone(new FeedScopedId(NETWORK_TIER, "a-park"), null, null, false, true)
-  );
+
+  static GeofencingZone NO_DROP_OFF_ZONE_TIER = TestGeofencingZoneBuilder.of(NETWORK_TIER, "a-park")
+    .noDropOff()
+    .build();
+
+  static GeofencingZone NO_DROP_OFF_ZONE_BIRD = TestGeofencingZoneBuilder.of(NETWORK_BIRD, "a-park")
+    .noDropOff()
+    .build();
+
+  static GeofencingZone NO_DROP_OFF_ZONE_TIER_2 = TestGeofencingZoneBuilder.of(
+    NETWORK_TIER,
+    "b-park"
+  )
+    .noDropOff()
+    .build();
+
+  static GeofencingZone NO_TRAVERSAL_ZONE = TestGeofencingZoneBuilder.of(
+    NETWORK_TIER,
+    "no-traverse"
+  )
+    .noTraversal()
+    .build();
+
+  static GeofencingZone BUSINESS_AREA_ZONE = TestGeofencingZoneBuilder.of(
+    NETWORK_TIER,
+    "business-area"
+  )
+    .asBusinessArea()
+    .build();
+
   StreetVertex V1 = intersectionVertex("V1", 0, 0);
   StreetVertex V2 = intersectionVertex("V2", 1, 1);
   StreetVertex V3 = intersectionVertex("V3", 2, 2);
   StreetVertex V4 = intersectionVertex("V4", 3, 3);
-
-  @Test
-  public void addTwoExtensions() {
-    var edge = streetEdge(V1, V2);
-    edge.addRentalRestriction(new BusinessAreaBorder("a"));
-    edge.addRentalRestriction(new BusinessAreaBorder("b"));
-
-    assertTrue(edge.fromv.rentalTraversalBanned(forwardState("a")));
-    assertTrue(edge.fromv.rentalTraversalBanned(forwardState("b")));
-  }
-
-  @Test
-  public void removeExtensions() {
-    var edge = streetEdge(V1, V2);
-    var a = new BusinessAreaBorder("a");
-    var b = new BusinessAreaBorder("b");
-    var c = new BusinessAreaBorder("c");
-
-    edge.addRentalRestriction(a);
-
-    assertTrue(edge.fromv.rentalRestrictions().traversalBanned(forwardState("a")));
-
-    edge.addRentalRestriction(b);
-    edge.addRentalRestriction(c);
-
-    edge.removeRentalExtension(a);
-
-    var restrictions = edge.fromv.rentalRestrictions();
-    assertTrue(restrictions.traversalBanned(forwardState("b")));
-    assertTrue(restrictions.traversalBanned(forwardState("c")));
-    assertFalse(restrictions.traversalBanned(forwardState("a")));
-
-    edge.removeRentalExtension(b);
-
-    assertTrue(edge.fromv.rentalRestrictions().traversalBanned(forwardState("c")));
-  }
-
-  @Test
-  public void checkNetwork() {
-    var edge = streetEdge(V1, V2);
-    edge.addRentalRestriction(new BusinessAreaBorder("a"));
-
-    var state = traverseFromV1(edge);
-
-    assertEquals(RENTING_FLOATING, state[0].getVehicleRentalState());
-    assertEquals(1, state.length);
-  }
 
   @Nested
   class Forward {
@@ -104,72 +79,343 @@ class StreetEdgeGeofencingTest {
 
     @Test
     public void leaveBusinessAreaOnFoot() {
-      var edge1 = streetEdge(V1, V2);
-      var ext = new BusinessAreaBorder(NETWORK_TIER);
-      V2.addRentalRestriction(ext);
+      // V1 is inside business area, V2 is outside → exiting at V1→V2 boundary
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(BUSINESS_AREA_ZONE, false));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(BUSINESS_AREA_ZONE, true));
 
-      var results = traverseFromV1(edge1);
-
-      var onFoot = results[0];
-      assertEquals(HAVE_RENTED, onFoot.getVehicleRentalState());
-      assertEquals(TraverseMode.WALK, onFoot.getBackMode());
-      assertEquals(1, results.length);
-    }
-
-    @Test
-    public void dontEnterGeofencingZoneOnFoot() {
       var edge = streetEdge(V1, V2);
-      V2.addRentalRestriction(
-        new GeofencingZoneExtension(
-          new GeofencingZone(new FeedScopedId(NETWORK_TIER, "a-park"), null, null, true, true)
-        )
-      );
-      State result = traverseFromV1(edge)[0];
-      assertEquals(WALK, result.getBackMode());
-      assertEquals(HAVE_RENTED, result.getVehicleRentalState());
+      var state = initialStateWithZones(V1, NETWORK_TIER, false, Set.of(BUSINESS_AREA_ZONE));
+
+      var results = edge.traverse(state);
+
+      assertEquals(1, results.length);
+      assertEquals(HAVE_RENTED, results[0].getVehicleRentalState());
+      assertEquals(TraverseMode.WALK, results[0].getBackMode());
     }
 
+    /**
+     * When the rider starts AT the boundary vertex and traverses into a no-drop-off zone,
+     * they continue riding normally. No drop-off is offered inside the zone — the
+     * pre-traversal fork on the approach edge handles the drop-at-boundary case.
+     */
     @Test
-    public void forkStateWhenEnteringNoDropOffZone() {
-      var edge1 = streetEdge(V4, V1);
-      var edge2 = streetEdge(V2, V3);
-      var restrictedEdge = streetEdge(V1, V2);
+    public void continueRidingWhenStartingAtNoDropOffZoneBoundary() {
+      // Set up boundary: V1 is outside, V2 is inside the no-drop-off zone
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, false));
+
+      var edge = streetEdge(V1, V2);
 
       var req = StreetSearchRequest.of().withMode(StreetMode.SCOOTER_RENTAL).build();
-      var editor = new StateEditor(edge1.getFromVertex(), req);
+      var editor = new StateEditor(V1, req);
       editor.beginFloatingVehicleRenting(
         RentalFormFactor.SCOOTER,
         PropulsionType.ELECTRIC,
         NETWORK_TIER,
         false
       );
-      restrictedEdge.addRentalRestriction(NO_DROP_OFF_TIER);
 
-      var results = edge1.traverse(editor.makeState());
-
-      var continueOnFoot = results[0];
-      assertEquals(HAVE_RENTED, continueOnFoot.getVehicleRentalState());
-      assertEquals(WALK, continueOnFoot.getBackMode());
-
-      var continueRenting = results[1];
-      assertEquals(RENTING_FLOATING, continueRenting.getVehicleRentalState());
-      assertEquals(SCOOTER, continueRenting.getBackMode());
-      assertTrue(continueRenting.isInsideNoRentalDropOffArea());
-
-      var insideZone = restrictedEdge.traverse(continueRenting)[0];
-
-      var leftNoDropOff = edge2.traverse(insideZone)[0];
-      assertFalse(leftNoDropOff.isInsideNoRentalDropOffArea());
-      assertEquals(RENTING_FLOATING, continueRenting.getVehicleRentalState());
+      var results = edge.traverse(editor.makeState());
+      assertEquals(1, results.length);
+      assertEquals(RENTING_FLOATING, results[0].getVehicleRentalState());
+      assertEquals(SCOOTER, results[0].getBackMode());
     }
 
+    /**
+     * When the rider approaches a no-drop-off zone boundary from one edge before, the
+     * pre-traversal check forks: one branch drops at the boundary vertex (outside zone),
+     * the other continues riding into the zone. The A* picks the best option based on
+     * whether the destination is inside or outside the zone.
+     */
     @Test
-    public void forwardDontFinishInNoDropOffZone() {
+    public void forkWhenApproachingNoDropOffZone() {
+      // V1→V2→V3, boundary at V2/V3. Rider approaches from V1.
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, true));
+      V3.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, false));
+
+      var approachEdge = streetEdge(V1, V2);
+
+      var req = StreetSearchRequest.of().withMode(StreetMode.SCOOTER_RENTAL).build();
+      var editor = new StateEditor(V1, req);
+      editor.beginFloatingVehicleRenting(
+        RentalFormFactor.SCOOTER,
+        PropulsionType.ELECTRIC,
+        NETWORK_TIER,
+        false
+      );
+
+      var results = approachEdge.traverse(editor.makeState());
+      assertEquals(2, results.length);
+
+      var droppedOff = results[0];
+      assertEquals(HAVE_RENTED, droppedOff.getVehicleRentalState());
+      assertEquals(SCOOTER, droppedOff.getBackMode());
+
+      var continueRiding = results[1];
+      assertEquals(RENTING_FLOATING, continueRiding.getVehicleRentalState());
+      assertEquals(SCOOTER, continueRiding.getBackMode());
+    }
+
+    /**
+     * A committed rider approaching a no-traversal zone boundary forks: one branch drops
+     * the vehicle (for walking into the zone), the other continues riding (for destinations
+     * reachable without entering the zone). The fork fires on the approach edge where
+     * tov is the boundary vertex (entering=true).
+     */
+    @Test
+    public void forwardNoTraversalBoundaryForksForCommittedRider() {
+      // V2 is the boundary (entering=true), V3 is inside zone (entering=false)
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, true));
+      V3.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, false));
+
+      // Approach edge: V1→V2, where tov=V2 is the boundary vertex
       var edge = streetEdge(V1, V2);
-      V2.addRentalRestriction(NO_DROP_OFF_TIER);
-      edge.addRentalRestriction(NO_DROP_OFF_TIER);
-      State result = traverseFromV1(edge)[0];
-      assertFalse(result.isFinal());
+      var state = initialState(V1, NETWORK_TIER, false);
+
+      var results = edge.traverse(state);
+      assertEquals(2, results.length);
+
+      var dropped = Arrays.stream(results)
+        .filter(s -> s.getVehicleRentalState() == HAVE_RENTED)
+        .findFirst();
+      assertTrue(dropped.isPresent(), "should have a drop branch");
+
+      var riding = Arrays.stream(results)
+        .filter(s -> s.getVehicleRentalState() == RENTING_FLOATING)
+        .findFirst();
+      assertTrue(riding.isPresent(), "should have a continue-riding branch");
+    }
+
+    /**
+     * The no-traversal pre-traversal should fork (drop + continue riding), not force drop.
+     * The boundary vertex V2 has outgoing edges that don't enter the zone (V2→V4). The
+     * rider should be able to continue riding from V2 toward V4 without dropping.
+     *
+     */
+    @Test
+    public void noTraversalBoundaryShouldForkNotForceDrop() {
+      // V2 is on the no-traversal zone boundary (entering=true toward V3)
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, true));
+      V3.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, false));
+
+      var approachEdge = streetEdge(V1, V2);
+      // V2→V4 exists: an outgoing edge from V2 that does NOT enter the zone
+      streetEdge(V2, V4);
+
+      var state = initialState(V1, NETWORK_TIER, false);
+      var results = approachEdge.traverse(state);
+
+      // Should fork like the no-drop-off case: one drop branch + one ride-through branch
+      assertEquals(2, results.length);
+
+      var dropped = Arrays.stream(results)
+        .filter(s -> s.getVehicleRentalState() == HAVE_RENTED)
+        .findFirst();
+      assertTrue(dropped.isPresent(), "should have a drop branch");
+
+      var riding = Arrays.stream(results)
+        .filter(s -> s.getVehicleRentalState() == RENTING_FLOATING)
+        .findFirst();
+      assertTrue(riding.isPresent(), "should have a continue-riding branch");
+    }
+
+    /**
+     * When a RENTING_FLOATING state starts AT a no-traversal boundary vertex (e.g., from a
+     * VehicleRentalEdge pickup) and tries to ride into the zone, the traversal is blocked.
+     * The walking branch from the VehicleRentalEdge fork handles reaching destinations
+     * inside the zone on foot.
+     */
+    @Test
+    public void ridingIntoNoTraversalZoneFromBoundaryVertexShouldBeBlocked() {
+      // V2 is the boundary vertex (entering=true), V3 is inside the zone (entering=false)
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, true));
+      V3.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, false));
+
+      var edge = streetEdge(V2, V3);
+      // Start RENTING_FLOATING at V2 (as if from VehicleRentalEdge pickup)
+      var state = initialState(V2, NETWORK_TIER, false);
+      var results = edge.traverse(state);
+
+      // Should be blocked: can't ride from boundary into zone.
+      // The walking branch (from VehicleRentalEdge HAVE_RENTED fork) handles this path.
+      assertEquals(0, results.length);
+    }
+
+    /**
+     * When a rider is inside a no-drop-off zone and hits a no-traversal boundary, they
+     * cannot drop (drop-off banned) and cannot continue (traversal banned). This branch
+     * is a dead end — the A* should use the branch that dropped outside the no-drop-off zone.
+     */
+    @Test
+    public void noTraversalBoundaryInsideNoDropOffZoneIsDeadEnd() {
+      // V2 is the no-traversal boundary (entering=true)
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, true));
+      V3.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, false));
+
+      var edge = streetEdge(V1, V2);
+      // Rider is inside a no-drop-off zone (zone already in state)
+      var state = initialStateWithZones(V1, NETWORK_TIER, false, Set.of(NO_DROP_OFF_ZONE_TIER));
+
+      var results = edge.traverse(state);
+      // Dead end: can't traverse (no-traversal ahead) and can't drop (inside no-drop-off zone)
+      assertEquals(0, results.length);
+    }
+
+    /**
+     * Same scenario but via the post-traversal trigger: a committed rider crosses a
+     * no-traversal boundary during traversal while inside a no-drop-off zone.
+     */
+    @Test
+    public void postTraversalNoTraversalEntryInsideNoDropOffZoneIsDeadEnd() {
+      // Boundary on V1/V2 for no-traversal zone — zone is entered during traversal
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, false));
+
+      var edge = streetEdge(V1, V2);
+      // Committed rider inside a no-drop-off zone
+      var state = initialStateWithZones(V1, NETWORK_TIER, false, Set.of(NO_DROP_OFF_ZONE_TIER));
+
+      var results = edge.traverse(state);
+      // Dead end: post-traversal trigger detects no-traversal entry, but drop-off is banned
+      assertEquals(0, results.length);
+    }
+
+    /**
+     * When a rider is inside a no-drop-off zone and has a no-traversal zone already in
+     * state (from a prior boundary crossing), the traversal-ban-in-state drop is blocked.
+     */
+    @Test
+    public void traversalBanInStateInsideNoDropOffZoneIsDeadEnd() {
+      // No-drop-off zone with traversalBanned=null (unspecified) so it doesn't override
+      // the no-traversal zone's traversalBanned=true via per-field precedence.
+      // No-drop-off zone: dropOffBanned=true, traversalBanned=null (unspecified).
+      // Higher priority (lower value) so its dropOffBanned wins per-field precedence.
+      var noDropOffOnly = TestGeofencingZoneBuilder.of(NETWORK_TIER, "no-dropoff-only")
+        .withDropOffBanned(true)
+        .build();
+      // No-traversal zone: traversalBanned=true, dropOffBanned=null (unspecified).
+      var noTraversalOnly = TestGeofencingZoneBuilder.of(NETWORK_TIER, "no-traverse-only")
+        .withTraversalBanned(true)
+        .withPriority(1)
+        .build();
+
+      var edge = streetEdge(V1, V2);
+      // Rider has both zones in state: can't traverse (no-traversal) and can't drop (no-drop-off)
+      var state = initialStateWithZones(
+        V1,
+        NETWORK_TIER,
+        false,
+        Set.of(noDropOffOnly, noTraversalOnly)
+      );
+
+      var results = edge.traverse(state);
+      assertEquals(0, results.length);
+    }
+
+    /**
+     * Same scenario but triggered by a business area exit boundary: rider is inside a
+     * no-drop-off zone and hits a business area boundary.
+     */
+    @Test
+    public void businessAreaExitInsideNoDropOffZoneIsDeadEnd() {
+      // V1 inside business area, V2 outside → exiting at V1→V2
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(BUSINESS_AREA_ZONE, false));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(BUSINESS_AREA_ZONE, true));
+
+      var edge = streetEdge(V1, V2);
+      var state = initialStateWithZones(
+        V1,
+        NETWORK_TIER,
+        false,
+        Set.of(NO_DROP_OFF_ZONE_TIER, BUSINESS_AREA_ZONE)
+      );
+
+      var results = edge.traverse(state);
+      assertEquals(0, results.length);
+    }
+
+    /**
+     * Business area exit and no-drop-off zone boundary at the same edge: the rider
+     * exits the business area AND enters a no-drop-off zone during the same traversal.
+     * The business area forced-drop must check post-traversal zone state.
+     */
+    @Test
+    public void businessAreaExitEnteringNoDropOffZoneIsDeadEnd() {
+      // V1 inside business area, V2 outside → exiting
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(BUSINESS_AREA_ZONE, false));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(BUSINESS_AREA_ZONE, true));
+      // V1→V2 also crosses a no-drop-off zone boundary (V1 outside, V2 inside)
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, false));
+
+      var edge = streetEdge(V1, V2);
+      // Rider has business area zone in state but NOT the no-drop-off zone
+      var state = initialStateWithZones(V1, NETWORK_TIER, false, Set.of(BUSINESS_AREA_ZONE));
+
+      var results = edge.traverse(state);
+      assertEquals(0, results.length);
+    }
+
+    /**
+     * When a committed rider already has a no-traversal zone in state (from a previous
+     * boundary crossing), subsequent edges force drop+walk via isTraversalBannedByCurrentZones.
+     */
+    @Test
+    public void forwardTraversalBanWhenZoneAlreadyInState() {
+      // No boundaries on vertices — the zone is already in state
+      var edge = streetEdge(V1, V2);
+      var state = initialStateWithZones(V1, NETWORK_TIER, false, Set.of(NO_TRAVERSAL_ZONE));
+
+      var results = edge.traverse(state);
+      assertEquals(1, results.length);
+      assertEquals(HAVE_RENTED, results[0].getVehicleRentalState());
+      assertEquals(WALK, results[0].getBackMode());
+    }
+
+    /**
+     * When a rider is already inside a no-drop-off zone and approaches a second one,
+     * no fork is offered — the rider continues riding through.
+     */
+    @Test
+    public void noForkWhenAlreadyInsideNoDropOffZone() {
+      // V2→V3 boundary for a second no-drop-off zone
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER_2, true));
+      V3.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER_2, false));
+
+      var edge = streetEdge(V1, V2);
+      // Rider already inside the first no-drop-off zone
+      var state = initialStateWithZones(V1, NETWORK_TIER, false, Set.of(NO_DROP_OFF_ZONE_TIER));
+
+      var results = edge.traverse(state);
+      assertEquals(1, results.length);
+      assertEquals(RENTING_FLOATING, results[0].getVehicleRentalState());
+      assertEquals(SCOOTER, results[0].getBackMode());
+    }
+
+    /**
+     * A committed RENTING_FLOATING state at a no-drop-off boundary takes the drop/ride
+     * fork. Generic (null-network) states only exist in arrive-by searches.
+     */
+    @Test
+    public void committedStateForkAtNoDropOffBoundary() {
+      // Boundary on V2 (entering=true) / V3 (entering=false). Edge V1→V2, tov=V2.
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, true));
+      V3.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, false));
+
+      var edge = streetEdge(V1, V2);
+      var state = initialState(V1, NETWORK_TIER, false);
+
+      var results = edge.traverse(state);
+      // Drop + ride branches from the no-drop-off fork
+      assertEquals(2, results.length);
+      var dropped = Arrays.stream(results)
+        .filter(s -> s.getVehicleRentalState() == HAVE_RENTED)
+        .findFirst();
+      assertTrue(dropped.isPresent());
+      var riding = Arrays.stream(results)
+        .filter(s -> s.getVehicleRentalState() == RENTING_FLOATING)
+        .findFirst();
+      assertTrue(riding.isPresent());
     }
   }
 
@@ -177,258 +423,376 @@ class StreetEdgeGeofencingTest {
   class Reverse {
 
     @Test
-    public void backwardsRejectWhenEnteringNoDropOffZone() {
-      var restrictedEdge = streetEdge(V1, V2);
-      V2.addRentalRestriction(NO_DROP_OFF_TIER);
+    public void pickupFloatingVehicleWhenLeavingNoTraversalZone() {
+      // 3-vertex graph: V3→V1→V2. Boundary at V1/V2, V2 inside no-traversal zone.
+      // Boundary fork fires on V1→V2 (walking only), deferred fork fires on V3→V1.
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, false));
 
-      var req = defaultArriveByRequest();
+      var boundaryEdge = streetEdge(V1, V2);
+      var deferredEdge = streetEdge(V3, V1);
+      var req = makeArriveByRequest(Set.of(NETWORK_TIER), Collections.emptySet());
+      var haveRentedState = makeHaveRentedState(V2, req, Set.of(NO_TRAVERSAL_ZONE));
 
-      var editor = new StateEditor(restrictedEdge.getToVertex(), req);
-      editor.dropFloatingVehicle(
-        RentalFormFactor.SCOOTER,
-        PropulsionType.ELECTRIC,
-        NETWORK_TIER,
-        true
-      );
+      assertTrue(haveRentedState.getCurrentGeofencingZones().contains(NO_TRAVERSAL_ZONE));
 
-      var s0 = editor.makeState();
-      assertEquals(Set.of(NETWORK_TIER), s0.stateData.noRentalDropOffZonesAtStartOfReverseSearch);
+      // Step 1: boundary fork on V1→V2 — only produces walking branch
+      var boundaryStates = boundaryEdge.traverse(haveRentedState);
+      assertEquals(1, boundaryStates.length);
+      var walkingAtV1 = boundaryStates[0];
+      assertEquals(HAVE_RENTED, walkingAtV1.getVehicleRentalState());
+      assertEquals(WALK, walkingAtV1.currentMode());
 
-      var result = restrictedEdge.traverse(s0);
+      // Step 2: deferred fork on V3→V1 — produces walking + RENTING_FLOATING
+      var states = deferredEdge.traverse(walkingAtV1);
+      assertTrue(states.length >= 2);
 
-      assertFalse(State.isEmpty(result));
-      assertNotNull(result);
-      assertEquals(2, result.length);
-    }
-
-    @Test
-    public void backwardDontFinishInNoDropOffZone() {
-      var edge = streetEdge(V1, V2);
-      edge.addRentalRestriction(NO_DROP_OFF_TIER);
-      var state = initialState(V2, NETWORK_TIER, true);
-      var state2 = edge.traverse(state)[0];
-      assertFalse(state2.isFinal());
-    }
-
-    @Test
-    public void backwardsDontEnterNoTraversalZone() {
-      var edge = streetEdge(V1, V2);
-      V2.addRentalRestriction(NO_TRAVERSAL);
-      var intialState = initialState(V2, NETWORK_TIER, true);
-      var result = edge.traverse(intialState);
-
-      assertTrue(State.isEmpty(result));
-      assertNotNull(result);
-    }
-
-    @Test
-    public void pickupFloatingVehicleWhenLeavingAZone() {
-      var req = defaultArriveByRequest();
-
-      var haveRentedState = makeHaveRentedState(V2, req);
-
-      var edge = streetEdge(V1, V2);
-      V2.addRentalRestriction(NO_TRAVERSAL);
-      var states = edge.traverse(haveRentedState);
-
-      // we want to pick up a vehicle
-      final State rentalState = states[1];
-      assertEquals(RENTING_FLOATING, rentalState.getVehicleRentalState());
-      assertEquals(SCOOTER, rentalState.currentMode());
-
-      // but also keep on walking in case we don't find an edge where to leave the vehicle
-      var walkingState = states[0];
-      assertEquals(HAVE_RENTED, walkingState.getVehicleRentalState());
+      // Walking branch
+      var walkingState = Arrays.stream(states)
+        .filter(s -> s.getVehicleRentalState() == HAVE_RENTED)
+        .findFirst()
+        .get();
       assertEquals(WALK, walkingState.currentMode());
+
+      // Renting branch (speculative pickup)
+      var rentalState = Arrays.stream(states)
+        .filter(s -> s.getVehicleRentalState() == RENTING_FLOATING)
+        .findFirst()
+        .get();
+      assertEquals(SCOOTER, rentalState.currentMode());
     }
 
     @Test
     public void pickupFloatingVehiclesWhenStartedInNoDropOffZone() {
-      var req = defaultArriveByRequest();
+      // 3-vertex graph: V3→V1→V2. Boundary at V1/V2, V2 inside both zones.
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, false));
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_BIRD, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_BIRD, false));
 
-      V2.addRentalRestriction(NO_DROP_OFF_TIER);
-      V2.addRentalRestriction(noDropOffRestriction(NETWORK_BIRD));
+      var boundaryEdge = streetEdge(V1, V2);
+      var deferredEdge = streetEdge(V3, V1);
+      var req = makeArriveByRequest(Collections.emptySet(), Collections.emptySet());
+      var haveRentedState = makeHaveRentedState(
+        V2,
+        req,
+        Set.of(NO_DROP_OFF_ZONE_TIER, NO_DROP_OFF_ZONE_BIRD)
+      );
 
-      var haveRentedState = makeHaveRentedState(V2, req);
+      // Step 1: boundary fork — walking only
+      var boundaryStates = boundaryEdge.traverse(haveRentedState);
+      assertEquals(1, boundaryStates.length);
+      var walkingAtV1 = boundaryStates[0];
+      assertEquals(HAVE_RENTED, walkingAtV1.getVehicleRentalState());
+
+      // Step 2: deferred fork — walking + per-network + generic
+      var states = deferredEdge.traverse(walkingAtV1);
+
+      // Should have: walking + per-network committed branches + generic
+      assertTrue(states.length >= 3);
+
+      // Walking branch
+      var walkState = Arrays.stream(states)
+        .filter(s -> s.getVehicleRentalState() == HAVE_RENTED)
+        .findFirst()
+        .get();
+      assertEquals(WALK, walkState.currentMode());
+
+      // Generic renting state (null network)
+      var genericState = Arrays.stream(states)
+        .filter(
+          s -> s.getVehicleRentalState() == RENTING_FLOATING && s.getVehicleRentalNetwork() == null
+        )
+        .findFirst();
+      assertTrue(genericState.isPresent());
+    }
+
+    @Test
+    public void pickupFloatingVehiclesWhenAllNetworksBanned() {
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, false));
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_BIRD, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_BIRD, false));
 
       var edge = streetEdge(V1, V2);
+      var req = makeArriveByRequest(Collections.emptySet(), Set.of(NETWORK_TIER, NETWORK_BIRD));
+      var haveRentedState = makeHaveRentedState(
+        V2,
+        req,
+        Set.of(NO_DROP_OFF_ZONE_TIER, NO_DROP_OFF_ZONE_BIRD)
+      );
 
       var states = edge.traverse(haveRentedState);
 
-      // we return 3 states: one for continuing walking, one for the speculative renting of
-      // a vehicle, but with the information of which networks' no-drop-off zones it started in
-      assertEquals(3, states.length);
+      // All networks banned — only walking state
+      assertEquals(1, states.length);
+      assertEquals(HAVE_RENTED, states[0].getVehicleRentalState());
+      assertEquals(WALK, states[0].currentMode());
+    }
 
-      // first the fallback walk state
-      final State walkState = states[0];
-      assertEquals(HAVE_RENTED, walkState.getVehicleRentalState());
-      assertEquals(WALK, walkState.currentMode());
+    @Test
+    public void pickupFloatingVehiclesWhenSomeNetworksBanned() {
+      // 3-vertex graph: V3→V1→V2. Boundary at V1/V2, V2 inside both zones.
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, false));
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_BIRD, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_BIRD, false));
 
-      // then the speculative renting case for unknown rental network
-      final State speculativeRenting = states[2];
-      assertEquals(RENTING_FLOATING, speculativeRenting.getVehicleRentalState());
-      assertEquals(SCOOTER, speculativeRenting.currentMode());
-      // null means that the vehicle has been rented speculatively and the rest of the backwards search
-      // needs to check if we really find a vehicle to pick up
-      assertNull(speculativeRenting.getVehicleRentalNetwork());
-      assertEquals(
-        Set.of(NETWORK_TIER, NETWORK_BIRD),
-        speculativeRenting.stateData.noRentalDropOffZonesAtStartOfReverseSearch
+      var boundaryEdge = streetEdge(V1, V2);
+      var deferredEdge = streetEdge(V3, V1);
+      // Bird is banned, tier is allowed
+      var req = makeArriveByRequest(Collections.emptySet(), Set.of(NETWORK_BIRD));
+      var haveRentedState = makeHaveRentedState(
+        V2,
+        req,
+        Set.of(NO_DROP_OFF_ZONE_TIER, NO_DROP_OFF_ZONE_BIRD)
       );
 
-      // then the speculative renting cases for specific rental networks
-      final State tierState = states[1];
-      assertEquals(RENTING_FLOATING, tierState.getVehicleRentalState());
-      assertEquals(SCOOTER, tierState.currentMode());
-      assertEquals(NETWORK_TIER, tierState.getVehicleRentalNetwork());
-      assertEquals(Set.of(), tierState.stateData.noRentalDropOffZonesAtStartOfReverseSearch);
-    }
+      // Step 1: boundary fork — walking only
+      var boundaryStates = boundaryEdge.traverse(haveRentedState);
+      assertEquals(1, boundaryStates.length);
 
-    @Test
-    public void pickupFloatingVehiclesWhenStartedInNoDropOffZoneAllNetworksAllowedByDefault() {
-      var states = runTraverse(Collections.emptySet(), Collections.emptySet());
+      // Step 2: deferred fork — walking + tier (bird banned)
+      var states = deferredEdge.traverse(boundaryStates[0]);
 
-      // Walking, unknown, Tier, Bird. (Order of last two not guaranteed)
-      assertEquals(4, states.length);
-      final State walkState = states[0];
-      assertEquals(HAVE_RENTED, walkState.getVehicleRentalState());
-      assertEquals(WALK, walkState.currentMode());
+      // Walking + tier committed + generic (bird is banned)
+      assertTrue(states.length >= 2);
 
-      final State unknownNetworkState = states[3];
-      assertEquals(RENTING_FLOATING, unknownNetworkState.getVehicleRentalState());
-      assertEquals(SCOOTER, unknownNetworkState.currentMode());
-      assertNull(unknownNetworkState.getVehicleRentalNetwork());
-
-      final State tierState = Arrays.stream(states)
+      var tierState = Arrays.stream(states)
         .filter(s -> NETWORK_TIER.equals(s.getVehicleRentalNetwork()))
-        .findFirst()
-        .get();
-      assertEquals(RENTING_FLOATING, tierState.getVehicleRentalState());
-      assertEquals(SCOOTER, tierState.currentMode());
+        .findFirst();
+      assertTrue(tierState.isPresent());
 
-      final State birdState = Arrays.stream(states)
+      var birdState = Arrays.stream(states)
         .filter(s -> NETWORK_BIRD.equals(s.getVehicleRentalNetwork()))
-        .findFirst()
-        .get();
-      assertEquals(RENTING_FLOATING, birdState.getVehicleRentalState());
-      assertEquals(SCOOTER, birdState.currentMode());
+        .findFirst();
+      assertFalse(birdState.isPresent());
     }
 
     @Test
-    public void pickupFloatingVehiclesWhenStartedInNoDropOffZoneAllNetworksAllowed() {
-      var states = runTraverse(Set.of(NETWORK_TIER, NETWORK_BIRD), Collections.emptySet());
+    public void pickupFloatingVehiclesWithAllowedNetworkFilter() {
+      // 3-vertex graph: V3→V1→V2. Boundary at V1/V2, V2 inside both zones.
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, false));
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_BIRD, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_BIRD, false));
 
-      // Walking, unknown, Tier, Bird. (Order of last two not guaranteed)
-      assertEquals(4, states.length);
-      final State walkState = states[0];
-      assertEquals(HAVE_RENTED, walkState.getVehicleRentalState());
-      assertEquals(WALK, walkState.currentMode());
+      var boundaryEdge = streetEdge(V1, V2);
+      var deferredEdge = streetEdge(V3, V1);
+      // Only tier is allowed
+      var req = makeArriveByRequest(Set.of(NETWORK_TIER), Collections.emptySet());
+      var haveRentedState = makeHaveRentedState(
+        V2,
+        req,
+        Set.of(NO_DROP_OFF_ZONE_TIER, NO_DROP_OFF_ZONE_BIRD)
+      );
 
-      final State unknownNetworkState = states[3];
-      assertEquals(RENTING_FLOATING, unknownNetworkState.getVehicleRentalState());
-      assertEquals(SCOOTER, unknownNetworkState.currentMode());
-      assertNull(unknownNetworkState.getVehicleRentalNetwork());
+      // Step 1: boundary fork — walking only
+      var boundaryStates = boundaryEdge.traverse(haveRentedState);
+      assertEquals(1, boundaryStates.length);
 
-      final State tierState = Arrays.stream(states)
+      // Step 2: deferred fork — walking + tier (bird not in allowed list)
+      var states = deferredEdge.traverse(boundaryStates[0]);
+
+      var tierState = Arrays.stream(states)
         .filter(s -> NETWORK_TIER.equals(s.getVehicleRentalNetwork()))
-        .findFirst()
-        .get();
-      assertEquals(RENTING_FLOATING, tierState.getVehicleRentalState());
-      assertEquals(SCOOTER, tierState.currentMode());
+        .findFirst();
+      assertTrue(tierState.isPresent());
 
-      final State birdState = Arrays.stream(states)
+      var birdState = Arrays.stream(states)
         .filter(s -> NETWORK_BIRD.equals(s.getVehicleRentalNetwork()))
-        .findFirst()
-        .get();
-      assertEquals(RENTING_FLOATING, birdState.getVehicleRentalState());
-      assertEquals(SCOOTER, birdState.currentMode());
+        .findFirst();
+      assertFalse(birdState.isPresent());
     }
 
-    @Test
-    public void pickupFloatingVehiclesWhenStartedInNoDropOffZoneSomeNetworksAllowed() {
-      var states = runTraverse(Set.of(NETWORK_TIER), Collections.emptySet());
-
-      // Walking, unknown, Tier.
-      assertEquals(3, states.length);
-      final State walkState = states[0];
-      assertEquals(HAVE_RENTED, walkState.getVehicleRentalState());
-      assertEquals(WALK, walkState.currentMode());
-
-      final State unknownNetworkState = states[2];
-      assertEquals(RENTING_FLOATING, unknownNetworkState.getVehicleRentalState());
-      assertEquals(SCOOTER, unknownNetworkState.currentMode());
-      assertNull(unknownNetworkState.getVehicleRentalNetwork());
-
-      final State tierState = states[1];
-      assertEquals(RENTING_FLOATING, tierState.getVehicleRentalState());
-      assertEquals(SCOOTER, tierState.currentMode());
-      assertEquals(NETWORK_TIER, tierState.getVehicleRentalNetwork());
-    }
-
-    @Test
-    public void pickupFloatingVehiclesWhenStartedInNoDropOffZoneAllNetworksBanned() {
-      var states = runTraverse(Collections.emptySet(), Set.of(NETWORK_TIER, NETWORK_BIRD));
-
-      // Should only have a walking state. The unknown network state should only be
-      // generated if there are known network states.
-      assertEquals(1, states.length);
-      final State walkState = states[0];
-      assertEquals(HAVE_RENTED, walkState.getVehicleRentalState());
-      assertEquals(WALK, walkState.currentMode());
-    }
-
-    @Test
-    public void pickupFloatingVehiclesWhenStartedInNoDropOffZoneSomeNetworksBanned() {
-      var states = runTraverse(Collections.emptySet(), Set.of(NETWORK_BIRD));
-
-      // Walking state, unknown network state, known network state for Tier (which wasn't banned)
-      assertEquals(3, states.length);
-
-      final State walkState = states[0];
-      assertEquals(HAVE_RENTED, walkState.getVehicleRentalState());
-      assertEquals(WALK, walkState.currentMode());
-
-      final State unknownNetworkState = states[2];
-      assertEquals(RENTING_FLOATING, unknownNetworkState.getVehicleRentalState());
-      assertEquals(SCOOTER, unknownNetworkState.currentMode());
-      assertNull(unknownNetworkState.getVehicleRentalNetwork());
-
-      final State tierState = states[1];
-      assertEquals(RENTING_FLOATING, tierState.getVehicleRentalState());
-      assertEquals(SCOOTER, tierState.currentMode());
-      assertEquals(NETWORK_TIER, tierState.getVehicleRentalNetwork());
-    }
-
-    private State[] runTraverse(Set<String> allowedNetworks, Set<String> bannedNetworks) {
-      var req = makeArriveByRequest(allowedNetworks, bannedNetworks);
-
-      V2.addRentalRestriction(NO_DROP_OFF_TIER);
-      V2.addRentalRestriction(noDropOffRestriction(NETWORK_BIRD));
-
-      var haveRentedState = makeHaveRentedState(V2, req);
-
-      var edge = streetEdge(V1, V2);
-
-      return edge.traverse(haveRentedState);
-    }
-
-    private static State makeHaveRentedState(Vertex vertex, StreetSearchRequest req) {
-      // this is the state that starts inside a restricted zone
-      // (no drop off, no traversal or outside business area)
-      // and is walking towards finding a rental vehicle
-      return State.getInitialStates(Set.of(vertex), req)
+    /**
+     * Create a HAVE_RENTED walker state with pre-populated currentGeofencingZones,
+     * simulating an arriveBy initial state at a destination inside geofencing zones.
+     */
+    private State makeHaveRentedState(
+      Vertex vertex,
+      StreetSearchRequest req,
+      Set<GeofencingZone> zones
+    ) {
+      var reqWithZones = StreetSearchRequest.copyOf(req)
+        .withArriveByDestinationZones(zones)
+        .build();
+      return State.getInitialStates(Set.of(vertex), reqWithZones)
         .stream()
         .filter(s -> s.getVehicleRentalState() == HAVE_RENTED)
         .findAny()
         .get();
     }
 
-    private static StreetSearchRequest defaultArriveByRequest() {
-      return StreetSearchRequest.of()
-        .withScooter(b -> b.withRental(r -> r.withAllowedNetworks(Set.of(NETWORK_TIER))))
-        .withMode(StreetMode.SCOOTER_RENTAL)
-        .withArriveBy(true)
-        .build();
+    @Test
+    public void arriveByRentingBlockedFromEnteringNoTraversalZone() {
+      // V1 inside no-traversal zone (entering=false), V2 boundary outside (entering=true). Paired.
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, false));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, true));
+
+      var edge = streetEdge(V1, V2);
+      // RENTING_FLOATING rider at V2 (tov), arrive-by traversal goes from V2 to V1 (into zone)
+      var rentingState = initialState(V2, NETWORK_TIER, true);
+
+      var states = edge.traverse(rentingState);
+      assertEquals(0, states.length);
+    }
+
+    @Test
+    public void arriveByRentingBlockedOnInteriorEdgeAdjacentToBoundary() {
+      // V1 is boundary vertex (entering=false, inside zone). V3 is interior (no boundary).
+      // Edge V1→V3: fromv=V1 has boundary, tov=V3 has none (not paired).
+      // Arrive-by traversal from V3 to V1 should still be blocked — the rider would
+      // enter the zone even though V3 has no boundary extension.
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, false));
+
+      var edge = streetEdge(V1, V3);
+      var rentingState = initialState(V3, NETWORK_TIER, true);
+
+      var states = edge.traverse(rentingState);
+      assertEquals(0, states.length);
+    }
+
+    @Test
+    public void arriveByRentingNotBlockedForDifferentNetwork() {
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, false));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, true));
+
+      var edge = streetEdge(V1, V2);
+      // Rider on BIRD network — zone is for TIER, should not be blocked
+      var rentingState = initialState(V2, NETWORK_BIRD, true);
+
+      var states = edge.traverse(rentingState);
+      assertTrue(states.length > 0);
+    }
+
+    @Test
+    public void arriveByGenericRentingPassesThroughNoTraversalZoneWithCommittedNetwork() {
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, false));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_TRAVERSAL_ZONE, true));
+
+      var edge = streetEdge(V1, V2);
+      // Generic state (null network) passes through but records the zone's network in
+      // committedNetworks — a committed branch for that network could never use this path.
+      var rentingState = initialState(V2, null, true);
+
+      var states = edge.traverse(rentingState);
+      assertEquals(1, states.length);
+      assertTrue(states[0].getCommittedNetworks().contains(NETWORK_TIER));
+    }
+
+    /**
+     * When a HAVE_RENTED walker has no zones in state, the arriveBy boundary fork trigger
+     * returns false (early return). Normal walking traversal occurs.
+     */
+    @Test
+    public void arriveByBoundaryForkNoOpWhenNoZonesInState() {
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, false));
+
+      var edge = streetEdge(V1, V2);
+      var req = makeArriveByRequest(Collections.emptySet(), Collections.emptySet());
+      // HAVE_RENTED walker with EMPTY zones
+      var haveRentedState = makeHaveRentedState(V2, req, Collections.emptySet());
+
+      var states = edge.traverse(haveRentedState);
+      assertEquals(1, states.length);
+      assertEquals(HAVE_RENTED, states[0].getVehicleRentalState());
+      assertEquals(WALK, states[0].currentMode());
+    }
+
+    /**
+     * When a walker exits one zone but remains inside another (overlapping zones),
+     * the deferred fork only creates branches for the exited zone's network.
+     */
+    @Test
+    public void deferredForkOnlyForksExitedZoneNetworks() {
+      // Boundary at V1/V2 for TIER zone only (not BIRD)
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, false));
+
+      var boundaryEdge = streetEdge(V1, V2);
+      var deferredEdge = streetEdge(V4, V1);
+      var req = makeArriveByRequest(Collections.emptySet(), Collections.emptySet());
+      // Walker inside both TIER and BIRD zones
+      var haveRentedState = makeHaveRentedState(
+        V2,
+        req,
+        Set.of(NO_DROP_OFF_ZONE_TIER, NO_DROP_OFF_ZONE_BIRD)
+      );
+
+      // Step 1: boundary fork — exits TIER zone, still inside BIRD
+      var boundaryStates = boundaryEdge.traverse(haveRentedState);
+      assertEquals(1, boundaryStates.length);
+      var walkingAtV1 = boundaryStates[0];
+      // TIER was exited, BIRD remains
+      assertTrue(walkingAtV1.getCurrentGeofencingZones().contains(NO_DROP_OFF_ZONE_BIRD));
+      assertFalse(walkingAtV1.getCurrentGeofencingZones().contains(NO_DROP_OFF_ZONE_TIER));
+
+      // Step 2: deferred fork — should fork TIER only (not BIRD)
+      var states = deferredEdge.traverse(walkingAtV1);
+      assertTrue(states.length >= 2);
+
+      // TIER committed branch exists
+      var tierState = Arrays.stream(states)
+        .filter(s -> NETWORK_TIER.equals(s.getVehicleRentalNetwork()))
+        .findFirst();
+      assertTrue(tierState.isPresent());
+
+      // No BIRD committed branch (BIRD zone was not exited)
+      var birdState = Arrays.stream(states)
+        .filter(s -> NETWORK_BIRD.equals(s.getVehicleRentalNetwork()))
+        .findFirst();
+      assertFalse(birdState.isPresent());
+    }
+
+    /**
+     * Adjacent no-drop-off zones (same network): walker exits zone A and enters zone B
+     * at the same boundary. The deferred fork should NOT create renting branches because
+     * the walker is still inside a no-drop-off zone (B) for the same network.
+     *
+     * This is the scenario that caused the Tøyen bug: the deferred fork's post-traversal
+     * veto failed because the traversed edge exited zone B, removing it from the editor's
+     * zone state. The pre-traversal veto on s0's zones catches this.
+     */
+    @Test
+    public void deferredForkBlockedByAdjacentSameNetworkNoDropOffZone() {
+      // Zone A boundary at V1/V2: V1 outside (entering=true), V2 inside (entering=false)
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, true));
+      V2.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER, false));
+      // Zone B (same network, adjacent) boundary at V1/V3: V1 inside (entering=false),
+      // V3 outside (entering=true). V1 is the shared vertex — inside B, outside A.
+      // Both sides of the boundary edge V3→V1 need extensions for updateGeofencingZones.
+      V3.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER_2, true));
+      V1.addGeofencingBoundary(new GeofencingBoundaryExtension(NO_DROP_OFF_ZONE_TIER_2, false));
+
+      var boundaryEdge = streetEdge(V1, V2);
+      // V3→V1 edge: the deferred fork will fire here. V3 is outside zone B.
+      var deferredEdge = streetEdge(V3, V1);
+
+      var req = makeArriveByRequest(Collections.emptySet(), Collections.emptySet());
+      // Initialize with both zones: zone A (destination) and zone B (adjacent, entered
+      // because destination vertex is near both zone boundaries in real geometry).
+      var haveRentedInBothZones = makeHaveRentedState(
+        V2,
+        req,
+        Set.of(NO_DROP_OFF_ZONE_TIER, NO_DROP_OFF_ZONE_TIER_2)
+      );
+
+      // Step 1: boundary fork on V1→V2 — exits zone A only (zone B has no pair on V2)
+      var boundaryStates = boundaryEdge.traverse(haveRentedInBothZones);
+      assertEquals(1, boundaryStates.length);
+      var walkingAtV1 = boundaryStates[0];
+      assertFalse(walkingAtV1.getCurrentGeofencingZones().contains(NO_DROP_OFF_ZONE_TIER));
+      assertTrue(walkingAtV1.getCurrentGeofencingZones().contains(NO_DROP_OFF_ZONE_TIER_2));
+
+      // Step 2: deferred fork on V3→V1 — should NOT create renting branches
+      // because the walker is inside zone B (same network, no-drop-off).
+      // Without the pre-traversal veto fix, this edge would exit zone B during
+      // traversal, and the post-traversal veto would miss it.
+      var states = deferredEdge.traverse(walkingAtV1);
+      assertEquals(1, states.length);
+      assertEquals(HAVE_RENTED, states[0].getVehicleRentalState());
     }
 
     private static StreetSearchRequest makeArriveByRequest(
@@ -447,19 +811,9 @@ class StreetEdgeGeofencingTest {
     }
   }
 
-  private static GeofencingZoneExtension noDropOffRestriction(String networkTier) {
-    return new GeofencingZoneExtension(
-      new GeofencingZone(new FeedScopedId(networkTier, "a-park"), null, null, true, false)
-    );
-  }
-
   private State[] traverseFromV1(StreetEdge edge) {
     var state = initialState(V1, NETWORK_TIER, false);
     return edge.traverse(state);
-  }
-
-  private State forwardState(String network) {
-    return initialState(V1, network, false);
   }
 
   private State initialState(Vertex startVertex, String network, boolean arriveBy) {
@@ -474,6 +828,45 @@ class StreetEdgeGeofencingTest {
       network,
       false
     );
+    return editor.makeState();
+  }
+
+  private State initialStateWithZones(
+    Vertex startVertex,
+    String network,
+    boolean arriveBy,
+    Set<GeofencingZone> zones
+  ) {
+    var req = StreetSearchRequest.of()
+      .withMode(StreetMode.SCOOTER_RENTAL)
+      .withArriveBy(arriveBy)
+      .build();
+    var editor = new StateEditor(startVertex, req);
+    editor.beginFloatingVehicleRenting(
+      RentalFormFactor.SCOOTER,
+      PropulsionType.ELECTRIC,
+      network,
+      false
+    );
+    editor.initializeGeofencingZones(zones);
+    return editor.makeState();
+  }
+
+  private State initialStateWithCommittedNetworks(
+    Vertex startVertex,
+    Set<String> committedNetworks
+  ) {
+    var req = StreetSearchRequest.of().withMode(StreetMode.SCOOTER_RENTAL).build();
+    var editor = new StateEditor(startVertex, req);
+    editor.beginFloatingVehicleRenting(
+      RentalFormFactor.SCOOTER,
+      PropulsionType.ELECTRIC,
+      null,
+      false
+    );
+    for (var network : committedNetworks) {
+      editor.addCommittedNetwork(network);
+    }
     return editor.makeState();
   }
 }
